[gd_scene load_steps=5 format=3 uid="uid://b8j2k3l4m5n6"]

[ext_resource type="Script" uid="uid://brukk584vh7oh" path="res://Scripts/MainMenu.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Button"]
content_margin_left = 30.0
content_margin_top = 15.0
content_margin_right = 30.0
content_margin_bottom = 15.0
bg_color = Color(0.4, 0.4, 0.4, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 5
border_color = Color(0.25, 0.25, 0.25, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 4
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ButtonPressed"]
content_margin_left = 30.0
content_margin_top = 15.0
content_margin_right = 30.0
content_margin_bottom = 15.0
bg_color = Color(0.3, 0.3, 0.3, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 2
border_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 2
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ButtonHover"]
content_margin_left = 30.0
content_margin_top = 15.0
content_margin_right = 30.0
content_margin_bottom = 15.0
bg_color = Color(0.5, 0.5, 0.5, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 5
border_color = Color(0.35, 0.35, 0.35, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 6
shadow_offset = Vector2(0, 5)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.5, 0.5, 0.5, 1)

[node name="TitleContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 80.0
offset_right = 250.0
offset_bottom = 180.0
grow_horizontal = 2

[node name="Label" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 56
text = "Boba & Blades"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -20.0
offset_right = 120.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_Button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ButtonPressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_ButtonHover")
theme_override_styles/focus = SubResource("StyleBoxFlat_ButtonHover")
text = "Start Game"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_Button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ButtonPressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_ButtonHover")
theme_override_styles/focus = SubResource("StyleBoxFlat_ButtonHover")
text = "Options"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_Button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ButtonPressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_ButtonHover")
theme_override_styles/focus = SubResource("StyleBoxFlat_ButtonHover")
text = "Exit Game"
